style/home.css
.hero-section {
    width: 100vw; 
    background: linear-gradient(to right, black, rgba(30, 60, 114, 0));
    color: white;
    padding: 100px 20px;
    text-align: center;
}
.hero-content h1 {
    font-size: 3rem;
    margin-bottom: 20px;
}

.hero-content p {
    font-size: 1.2rem;
    margin-bottom: 30px;
}

.hero-buttons {
    display: flex;
    justify-content: center;
    gap: 20px;
}


.btn {
    padding: 10px 20px;
    border-radius: 5px;
    font-size: 1rem;
    cursor: pointer;
    transition: background-color 0.3s ease;
    background-color: transparent; 
    color: white;
    border: 2px solid white;
}

.btn:hover {
    background-color: #B0B0B0;
}

.featured-models {
    padding: 60px 20px;
    text-align: center;
}

.featured-models h2 {
    font-size: 2.5rem;
    margin-bottom: 40px;
}

.model-grid {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
    gap: 20px;
    max-width: 1200px;
    margin: 0 auto;
}


.cta-section {
    width: 100vw;
    background-color: #f1f1f1;
    padding: 80px 20px;
    text-align: center;
}

.cta-content h2 {
    font-size: 2.5rem;
    margin-bottom: 20px;
}

.cta-content p {
    font-size: 1.2rem;
    margin-bottom: 30px;
}

@media (max-width: 768px) {
    .hero-content h1 {
        font-size: 2rem;
    }

    .hero-content p {
        font-size: 1rem;
    }

    .featured-models h2 {
        font-size: 2rem;
    }

    .cta-content h2 {
        font-size: 2rem;
    }
}

